# ocr-cuenta

./: .env.example  .gitignore  AGENTS.md  BOOTSTRAP.md  Dockerfile  Dockerfile.ui  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.opencode/agents/: developer.md  devops.md  orchestrator.md  qa.md
.opencode/skills/ocr-extraction/: SKILL.md
app/: __init__.py  auth.py  config.py  database.py  extractor.py  main.py  models.py
app/routers/: __init__.py  auth.py  facturas.py
app/services/: __init__.py  llm_client.py  ollama_client.py  pdf_reader.py
docs/: ADR-001.md  BRIEF.md  DELIVERY.md  DOD.md  PRD.md  STACK.md  USER_FLOWS.md  architecture.md  critique_v1.md  loop_history.md
scripts/: migrate.sh  start.sh  test.sh
tests/: conftest.py
tests/e2e/: test_flujo_completo.py
tests/integration/: test_auth_api.py  test_facturas_api.py
tests/unit/: test_auth.py  test_extractor.py  test_llm_client.py  test_models.py  test_pdf_reader.py
ui/: streamlit_app.py
