[project]
name = "ocr-dian"
version = "1.0.0"
description = "Servicio de extracción de datos de facturas colombianas (DIAN) usando OCR + LLMs"
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "pydantic==2.10.4",
    "pyjwt==2.10.1",
    "python-multipart==0.0.20",
    "httpx==0.28.1",
    "pdfplumber==0.11.4",
    "pdf2image==1.17.0",
    "pytesseract==0.3.13",
    "sqlalchemy[asyncio]==2.0.36",
    "asyncpg==0.30.0",
    "alembic==1.14.1",
    "python-dotenv==1.0.1",
    "python-dateutil==2.9.0.post0",
    "Pillow==11.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
    "pytest-cov==6.0.0",
    "ruff==0.8.6",
    "httpx==0.28.1",
    "aiosqlite==0.20.0",
    "pytest-playwright==0.6.2",
    "playwright==1.49.1",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "ui/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
